--- a/my_entertainment_app/appsettings.json
+++ b/my_entertainment_app/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "apiKey": "e1342032f3679dde88cdc665f5473777"
 }
